--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -158,6 +158,41 @@
   }
 }
 
+
+
+.popup__input_type_error {
+  border-bottom: 1px solid red;
+}
+
+.popup__error {
+  color: red;
+  font-size: 12px;
+  line-height: 15px;
+  display: block;
+  min-height: 15px;
+  margin-top: 5px;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+.popup__error_visible {
+  opacity: 1;
+}
+
+.popup__button_disabled {
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  cursor: default;
+}
+
+.popup__button_disabled:hover {
+  background-color: transparent;
+  opacity: 1;
+}
+
+
+
 .popup {
   position: fixed;
   top: 0;
