--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -38,44 +38,40 @@
   margin: 0;
   font-size: 24px;
   font-weight: 900;
-  line-height: 30px;
+  line-height: 1.25;
   color: #000;
 }
 
 .popup__form {
-  margin-top: 54px;
+  margin-top: 48px;
   display: flex;
   flex-direction: column;
 }
 
 .popup__input {
   width: 100%;
-  height: 47px;
+  height: 27px;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 14px;
-  line-height: 17px;
+  line-height: 1.2;
   box-sizing: border-box;
-  padding: 0 0 8px;
-  margin-bottom: 30px;
+  padding: 0;
+  margin-bottom: 5px;
   outline: none;
 }
 
-.popup__input:last-of-type {
-  margin-bottom: 0;
-}
-
 .popup__input_type_error {
-  border-bottom: 1px solid #FF0000;
+  border-bottom-color: #FF0000;
 }
 
 .popup__error {
   color: #FF0000;
   font-size: 12px;
-  line-height: 15px;
+  line-height: 1.2;
   display: block;
   min-height: 15px;
-  margin-top: 5px;
+  margin-bottom: 25px;
   opacity: 0;
   transition: opacity 0.2s;
 }
@@ -88,12 +84,12 @@
   width: 100%;
   height: 50px;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.2;
   color: #fff;
   background: #000;
   border-radius: 2px;
   border: none;
-  margin-top: 48px;
+  margin-top: 23px;
   cursor: pointer;
   transition: opacity 0.2s;
 }
@@ -109,10 +105,6 @@
   cursor: default;
 }
 
-.popup__button_disabled:hover {
-  opacity: 1;
-}
-
 .popup__close {
   width: 35px;
   height: 35px;
@@ -123,9 +115,7 @@
   top: -40px;
   right: -40px;
   padding: 0;
-  margin: 0;
   cursor: pointer;
-  transition: opacity 0.2s;
 }
 
 .popup__close:hover {
@@ -133,29 +123,27 @@
 }
 
 .popup__content_content_image {
+  background: transparent;
+  padding: 0;
   max-width: 75vw;
   max-height: 75vh;
-  height: auto;
-  width: auto;
-  display: flex;
-  background: transparent;
   border-radius: 0;
-  padding: 0;
+  box-shadow: none;
+  min-height: auto;
 }
 
 .popup__image {
   max-width: 100%;
-  object-fit: cover;
+  max-height: 75vh;
+  display: block;
+  object-fit: contain;
 }
 
 .popup__caption {
   font-size: 12px;
-  line-height: 15px;
+  line-height: 1.2;
   color: #fff;
-  position: absolute;
-  left: 0;
-  top: calc(100% + 10px);
-  margin: 0;
+  margin-top: 10px;
 }
 
 @media screen and (max-width: 544px) {
@@ -167,7 +155,6 @@
 
   .popup__title {
     font-size: 18px;
-    line-height: 22px;
   }
 
   .popup__form {
@@ -183,12 +170,7 @@
 
   .popup__button {
     font-size: 14px;
-    line-height: 17px;
     height: 46px;
     margin-top: 45px;
-  }
-
-  .popup__content_content_image {
-    max-width: 80vw;
   }
 }
